<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:behavior_peekHeight="56dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">


    <LinearLayout
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/primary_light_0"
        android:gravity="center_vertical"
        android:paddingStart="24dp"
        android:paddingEnd="24dp">


        <TextView
            android:id="@+id/btn_share"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            tools:drawableTop="@drawable/ic_share"
            android:drawablePadding="2dp"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/txt_share"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/txt_xs_small" />

        <TextView
            android:id="@+id/btn_move"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            tools:drawableTop="@drawable/ic_move"
            android:drawablePadding="2dp"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/txt_move"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/txt_xs_small" />

        <TextView
            android:id="@+id/btn_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            tools:drawableTop="@drawable/ic_delete"
            android:drawablePadding="2dp"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/txt_del"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/txt_xs_small" />

        <TextView
            android:id="@+id/btn_more"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            tools:drawableTop="@drawable/ic_more"
            android:drawablePadding="2dp"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/txt_more"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/txt_xs_small" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_copy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:padding="@dimen/activity_vertical_margin"
            android:text="@string/txt_copy"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/txt_xs_medium" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#aabbcc" />

        <TextView
            android:id="@+id/tv_rename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:padding="@dimen/activity_vertical_margin"
            android:text="@string/txt_rename"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/txt_xs_medium" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#aabbcc" />

        <TextView
            android:id="@+id/tv_det"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:padding="@dimen/activity_vertical_margin"
            android:text="@string/txt_details"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/txt_xs_medium" />

    </LinearLayout>


</LinearLayout>