<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/zone_imgs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="12dp"
            android:paddingBottom="12dp">

            <RelativeLayout
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/bg_circle_color1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/ic_imgs" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_imgs"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/txt_xs_medium" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/zone_vids"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="12dp"
            android:paddingBottom="12dp">

            <RelativeLayout
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/bg_circle_accent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/ic_vids" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_vids"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/txt_xs_medium" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/zone_docs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="12dp"
            android:paddingBottom="12dp">

            <RelativeLayout
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/bg_circle_color3">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/ic_docs" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_docs"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/txt_xs_medium" />

        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/zone_music"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="12dp"
            android:paddingBottom="12dp">

            <RelativeLayout
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/bg_circle_color4">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/ic_music" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_music"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/txt_xs_medium" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/zone_downloads"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="12dp"
            android:paddingBottom="12dp">

            <RelativeLayout
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/bg_circle_color5">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/ic_downloads" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_dwnls"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/txt_xs_medium" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/zone_apk"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="12dp"
            android:paddingBottom="12dp">

            <RelativeLayout
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/bg_circle_color6">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/ic_archives" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_apks"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/txt_xs_medium" />

        </LinearLayout>


    </LinearLayout>


    <include layout="@layout/banner_placeholder" />


    <android.support.v7.widget.RecyclerView
        android:id="@+id/itms_last"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="8dp" />


    <RelativeLayout
        android:id="@+id/directory_empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/ivsdf"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_file_gray_116dp"
            android:tint="@color/compatibility_pressed_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivsdf"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:fontFamily="sans-serif-medium"
            android:text="@string/empty_directory_hint"
            android:textColor="@color/compatibility_pressed_color"
            android:textSize="@dimen/txt_large" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rv_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/werwer"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_file_gray_116dp"
            android:tint="@color/compatibility_pressed_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/werwer"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:fontFamily="sans-serif-medium"
            android:text="@string/tv_loading"
            android:textColor="@color/compatibility_pressed_color"
            android:textSize="@dimen/txt_large" />

    </RelativeLayout>


</LinearLayout>